--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </div>
 
           <div class="about__buttons">
-            <a download="" href="assets/pdf/Fajar Pratama - CV.jpg" class="button button--flex">
+            <a download="" href="assets/pdf/FajarCV.jpg" class="button button--flex">
               Download CV<i class="uil uil-download-alt button__icon"></i>
             </a>
           </div>
